@@ -37,6 +37,7 @@
 
 #include <sstream>
 #include <prio.h>
+#include <private/pprio.h>
 #include <prinrval.h>
 
 #include <vpr/IO/TimeoutException.h>
@@ -71,7 +72,7 @@ void SocketDatagramImplNSPR::recvfrom(void* msg, const vpr::Uint32 length,
    }
    else if ( bytes == -1 )
    {
-      PRErrorCode err_code = PR_GetError();
+      const PRErrorCode err_code = PR_GetError();
 
       bytesRead = 0;
 
@@ -91,6 +92,14 @@ void SocketDatagramImplNSPR::recvfrom(void* msg, const vpr::Uint32 length,
       }
       else if ( err_code == PR_IO_TIMEOUT_ERROR )
       {
+#if defined(WINNT)
+         // Handle the case of a timeout error on an NT socket. We have to
+         // tell NSPR to put the socket back into the right state. We do not
+         // need to worry about whether the socket is blocking because the
+         // timeout is ignored by non-blocking NSPR sockets.
+         PR_NT_CancelIo(mHandle);
+#endif
+
          msg_stream << "recvfrom operation timed out";
 
          if ( ! nspr_err_msg.empty() )
@@ -158,7 +167,7 @@ void SocketDatagramImplNSPR::sendto(const void* msg, const vpr::Uint32 length,
 
    if ( bytes == -1 )
    {
-      PRErrorCode err_code = PR_GetError();
+      const PRErrorCode err_code = PR_GetError();
 
       bytesSent = 0;
 
@@ -178,6 +187,14 @@ void SocketDatagramImplNSPR::sendto(const void* msg, const vpr::Uint32 length,
       }
       else if ( err_code == PR_IO_TIMEOUT_ERROR )
       {
+#if defined(WINNT)
+         // Handle the case of a timeout error on an NT socket. We have to
+         // tell NSPR to put the socket back into the right state. We do not
+         // need to worry about whether the socket is blocking because the
+         // timeout is ignored by non-blocking NSPR sockets.
+         PR_NT_CancelIo(mHandle);
+#endif
+
          msg_stream << "Write operation timed out";
 
          if ( ! nspr_err_msg.empty() )
