@@ -1,5 +1,9 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2006-08-23 patrick  Fixed bugs in the NSPR socket classes related to timeouts
+                    on blocking sockets when using the WINNT configuration of
+                    NSPR.
+                    NEW VERSION: 1.1.27
 2006-08-10 patrick  Updated for Boost.Filesystem changes in Boost 1.34.
                     NEW VERSION: 1.1.26
 2006-08-03 dshipton Get rid of vpr-config and opt for flagpoll
